aggiunti datapoint nello scatterPlot

--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[632 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -331,10 +331,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos\n",
+      "FW    419\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
+    "# prendi solo gli attaccanti\n",
+    "df = df[df['Pos'] == 'FW']\n",
+    "\n",
+    "# conta quanti sono\n",
+    "print(df['Pos'].value_counts())\n",
+    "\n",
+    "# prendi solo gli attaccanti della serie a\n",
+    "df = df[df['Comp'] == 'Serie A']\n",
+    "\n",
     "df_refined = df[[\"Player\",\"Shots\",\"Goals\"]]\n",
     "# dump into a new csv file\n",
     "df_refined.to_csv('./data/2021-2022-player-stats-refined.csv', sep=',', index=False)"
