aggiunta suddivisione in ruoli del dataset

--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,21 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Premier League' 'Ligue 1' 'Bundesliga' 'Serie A' 'La Liga']\n",
+      "['DF' 'MF' 'FW' 'MFFW' 'FWMF' 'GK' 'DFMF' 'FWDF' 'MFDF' 'DFFW' 'GKMF']\n",
       "['Rk', 'Player', 'Nation', 'Pos', 'Squad', 'Comp', 'Age', 'Born', 'MP', 'Starts', 'Min', '90s', 'Goals', 'Shots', 'SoT', 'SoT%', 'G/Sh', 'G/SoT', 'ShoDist', 'ShoFK', 'ShoPK', 'PKatt', 'PasTotCmp', 'PasTotAtt', 'PasTotCmp%', 'PasTotDist', 'PasTotPrgDist', 'PasShoCmp', 'PasShoAtt', 'PasShoCmp%', 'PasMedCmp', 'PasMedAtt', 'PasMedCmp%', 'PasLonCmp', 'PasLonAtt', 'PasLonCmp%', 'Assists', 'PasAss', 'Pas3rd', 'PPA', 'CrsPA', 'PasProg', 'PasAtt', 'PasLive', 'PasDead', 'PasFK', 'TB', 'PasPress', 'Sw', 'PasCrs', 'CK', 'CkIn', 'CkOut', 'CkStr', 'PasGround', 'PasLow', 'PasHigh', 'PaswLeft', 'PaswRight', 'PaswHead', 'TI', 'PaswOther', 'PasCmp', 'PasOff', 'PasOut', 'PasInt', 'PasBlocks', 'SCA', 'ScaPassLive', 'ScaPassDead', 'ScaDrib', 'ScaSh', 'ScaFld', 'ScaDef', 'GCA', 'GcaPassLive', 'GcaPassDead', 'GcaDrib', 'GcaSh', 'GcaFld', 'GcaDef', 'Tkl', 'TklWon', 'TklDef3rd', 'TklMid3rd', 'TklAtt3rd', 'TklDri', 'TklDriAtt', 'TklDri%', 'TklDriPast', 'Press', 'PresSucc', 'Press%', 'PresDef3rd', 'PresMid3rd', 'PresAtt3rd', 'Blocks', 'BlkSh', 'BlkShSv', 'BlkPass', 'Int', 'Tkl+Int', 'Clr', 'Err', 'Touches', 'TouDefPen', 'TouDef3rd', 'TouMid3rd', 'TouAtt3rd', 'TouAttPen', 'TouLive', 'DriSucc', 'DriAtt', 'DriSucc%', 'DriPast', 'DriMegs', 'Carries', 'CarTotDist', 'CarPrgDist', 'CarProg', 'Car3rd', 'CPA', 'CarMis', 'CarDis', 'RecTarg', 'Rec', 'Rec%', 'RecProg', 'CrdY', 'CrdR', '2CrdY', 'Fls', 'Fld', 'Off', 'Crs', 'TklW', 'PKwon', 'PKcon', 'OG', 'Recov', 'AerWon', 'AerLost', 'AerWon%']\n"
      ]
     }
    ],
    "source": [
     "# stampa i valori distinti di comp\n",
-    "print(df['Comp'].unique())\n",
+    "print(df['Pos'].unique())\n",
     "\n",
     "# stampa la lista delle features\n",
     "print(list(df.columns))"
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[632 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -331,32 +331,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pos\n",
-      "FW    419\n",
-      "Name: count, dtype: int64\n"
+      "[['FW', 'FWMF', 'FWDF'], ['MF', 'MFDF', 'MFFW'], ['DF', 'DFMF', 'DFFW']]\n"
      ]
     }
    ],
    "source": [
-    "# prendi solo gli attaccanti\n",
-    "df = df[df['Pos'] == 'FW']\n",
+    "competitions = [\"Serie A\", \"Premier League\", \"La Liga\", \"Bundesliga\", \"Ligue 1\"]\n",
     "\n",
-    "# conta quanti sono\n",
-    "print(df['Pos'].value_counts())\n",
+    "forward_positions = [\"FW\", \"FWMF\", \"FWDF\"]\n",
+    "midfield_positions = [\"MF\", \"MFDF\", \"MFFW\"]\n",
+    "defender_positions = [\"DF\", \"DFMF\", \"DFFW\"]\n",
     "\n",
-    "# prendi solo gli attaccanti della serie a\n",
-    "df = df[df['Comp'] == 'Serie A']\n",
+    "best_features = [\"Player\", \"Shots\", \"Goals\", \"Comp\", \"Pos\"]\n",
     "\n",
-    "df_refined = df[[\"Player\",\"Shots\",\"Goals\"]]\n",
-    "# dump into a new csv file\n",
-    "df_refined.to_csv('./data/2021-2022-player-stats-refined.csv', sep=',', index=False)"
+    "positions = [forward_positions,midfield_positions,defender_positions]\n",
+    "print(positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:21: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:22: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_3248\\2573796539.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# removing outliers, who never player more than 180 mins\n",
+    "df = df[df['90s'] > 2]\n",
+    "\n",
+    "df = df[best_features]\n",
+    "\n",
+    "for competition in competitions:\n",
+    "    df_refined = df[df['Comp'] == competition]\n",
+    "\n",
+    "    import os\n",
+    "    if not os.path.exists(f'./data/{competition}'):\n",
+    "        os.makedirs(f'./data/{competition}')\n",
+    "\n",
+    "    for position in positions:\n",
+    "        pos = None\n",
+    "        if position == forward_position:\n",
+    "            pos = \"attk\"\n",
+    "        elif position == midfield_position:\n",
+    "            pos = \"cen\"\n",
+    "        else:\n",
+    "            pos = \"dif\"\n",
+    "        df_refined_1 = df_refined[df[\"Pos\"] == position[0]]\n",
+    "        df_refined_2 = df_refined[df[\"Pos\"] == position[1]]\n",
+    "        df_refined_3 = df_refined[df[\"Pos\"] == position[2]]\n",
+    "        df_forward = pd.concat([df_refined_1, df_refined_2, df_refined_3], axis=0)\n",
+    "        df_forward.to_csv(f'./data/{competition}/{pos}.csv', index=False)\n",
+    "        "
    ]
   }
  ],
