added barPlot interaction

--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -341,7 +341,7 @@
     "midfield_positions = [\"MF\", \"MFDF\", \"MFFW\"]\n",
     "defender_positions = [\"DF\", \"DFMF\", \"DFFW\"]\n",
     "\n",
-    "common_features = [\"Player\", \"Squad\", \"Comp\", \"MP\", \"Min\", \"Pos\"]\n",
+    "common_features = [\"Player\", \"Squad\", \"Comp\", \"MP\", \"Min\", \"Pos\", \"90s\"]\n",
     "\n",
     "forward_features = [\"Goals\", \"Shots\", \"SoT\", \"G/Sh\", \"G/SoT\", \"ShoDist\", \"GCA\", \"SCA\", \"Off\", \"PKwon\", \"ScaDrib\", \"Assists\",\n",
     "                    \"ScaPassLive\", \"Car3rd\", \"ScaFld\",  \"Carries\", \"CarTotDist\", \"CarPrgDist\", 'CPA', \"CarMis\", \"CarDis\"]  # \"ToAtt\", \"ToSuc\"\n",
@@ -367,95 +367,95 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_1 = df_refined[df[\"Pos\"] == position[0]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_2 = df_refined[df[\"Pos\"] == position[1]][features_set]\n",
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_9864\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_8812\\1973115193.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_refined_3 = df_refined[df[\"Pos\"] == position[2]][features_set]\n"
      ]
     }
@@ -492,30 +492,6 @@
     "        df_forward = pd.concat([df_refined_1, df_refined_2, df_refined_3], axis=0)\n",
     "        df_forward.to_csv(f'./data/{competition}/{pos}.csv', index=False)\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "455.4\n",
-      "30.6\n",
-      "174.57197231833908\n"
-     ]
-    }
-   ],
-   "source": [
-    "# calcola valore massimo e minimo della feature CarTotDist\n",
-    "print(df['CarTotDist'].max())\n",
-    "print(df['CarTotDist'].min())\n",
-    "\n",
-    "# calcola media della feature CarTotDist\n",
-    "print(df['CarTotDist'].mean())\n"
    ]
   }
  ],
