--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\georg\\AppData\\Local\\Temp\\ipykernel_9084\\679700640.py:6: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  df[\"Player\"] = df[\"Player\"].str.replace('?', '')\n"
+     ]
+    }
+   ],
    "source": [
     "def remove_special_characters(input_str):\n",
     "    return re.sub(r'[^a-zA-Z0-9\\s]', '', input_str)\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -238,50 +247,50 @@
        "</div>"
       ],
       "text/plain": [
-       "   sofifa_id                                         player_url   \n",
-       "0     158023  https://sofifa.com/player/158023/lionel-messi/...  \\\n",
+       "   sofifa_id                                         player_url  \\\n",
+       "0     158023  https://sofifa.com/player/158023/lionel-messi/...   \n",
        "1      20801  https://sofifa.com/player/20801/c-ronaldo-dos-...   \n",
        "2     188545  https://sofifa.com/player/188545/robert-lewand...   \n",
        "3     190871  https://sofifa.com/player/190871/neymar-da-sil...   \n",
        "4     192985  https://sofifa.com/player/192985/kevin-de-bruy...   \n",
        "\n",
-       "          short_name                            long_name player_positions   \n",
-       "0           L. Messi       Lionel Andrés Messi Cuccittini       RW, ST, CF  \\\n",
+       "          short_name                            long_name player_positions  \\\n",
+       "0           L. Messi       Lionel Andrés Messi Cuccittini       RW, ST, CF   \n",
        "1  Cristiano Ronaldo  Cristiano Ronaldo dos Santos Aveiro           ST, LW   \n",
        "2     R. Lewandowski                   Robert Lewandowski               ST   \n",
        "3          Neymar Jr        Neymar da Silva Santos Júnior          LW, CAM   \n",
        "4       K. De Bruyne                      Kevin De Bruyne          CAM, CM   \n",
        "\n",
-       "   overall  potential    value_eur  wage_eur  age  ...    cb   rcb    rb   \n",
-       "0       93         93  103500000.0  560000.0   33  ...  52+3  52+3  62+3  \\\n",
+       "   overall  potential    value_eur  wage_eur  age  ...    cb   rcb    rb  \\\n",
+       "0       93         93  103500000.0  560000.0   33  ...  52+3  52+3  62+3   \n",
        "1       92         92   63000000.0  220000.0   35  ...  54+3  54+3  61+3   \n",
        "2       91         91  111000000.0  240000.0   31  ...  60+3  60+3  61+3   \n",
        "3       91         91  132000000.0  270000.0   28  ...  49+3  49+3  62+3   \n",
        "4       91         91  129000000.0  370000.0   29  ...  69+3  69+3  75+3   \n",
        "\n",
-       "     gk                                    player_face_url   \n",
-       "0  19+3  https://cdn.sofifa.net/players/158/023/21_120.png  \\\n",
+       "     gk                                    player_face_url  \\\n",
+       "0  19+3  https://cdn.sofifa.net/players/158/023/21_120.png   \n",
        "1  20+3  https://cdn.sofifa.net/players/020/801/21_120.png   \n",
        "2  19+3  https://cdn.sofifa.net/players/188/545/21_120.png   \n",
        "3  20+3  https://cdn.sofifa.net/players/190/871/21_120.png   \n",
        "4  21+3  https://cdn.sofifa.net/players/192/985/21_120.png   \n",
        "\n",
-       "                             club_logo_url   \n",
-       "0  https://cdn.sofifa.net/teams/241/60.png  \\\n",
+       "                             club_logo_url  \\\n",
+       "0  https://cdn.sofifa.net/teams/241/60.png   \n",
        "1   https://cdn.sofifa.net/teams/45/60.png   \n",
        "2   https://cdn.sofifa.net/teams/21/60.png   \n",
        "3   https://cdn.sofifa.net/teams/73/60.png   \n",
        "4   https://cdn.sofifa.net/teams/10/60.png   \n",
        "\n",
-       "                             club_flag_url   \n",
-       "0      https://cdn.sofifa.net/flags/es.png  \\\n",
+       "                             club_flag_url  \\\n",
+       "0      https://cdn.sofifa.net/flags/es.png   \n",
        "1      https://cdn.sofifa.net/flags/it.png   \n",
        "2      https://cdn.sofifa.net/flags/de.png   \n",
        "3      https://cdn.sofifa.net/flags/fr.png   \n",
        "4  https://cdn.sofifa.net/flags/gb-eng.png   \n",
        "\n",
-       "                            nation_logo_url   \n",
-       "0  https://cdn.sofifa.net/teams/1369/60.png  \\\n",
+       "                            nation_logo_url  \\\n",
+       "0  https://cdn.sofifa.net/teams/1369/60.png   \n",
        "1  https://cdn.sofifa.net/teams/1354/60.png   \n",
        "2                                       NaN   \n",
        "3                                       NaN   \n",
@@ -297,7 +306,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,14 +398,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Squad\n",
       "Club Deportivo Jorge Wilstermann    1\n",
       "Hebei FC                            1\n",
       "Al Ahli                             1\n",
@@ -408,7 +416,7 @@
       "KAS Eupen                           1\n",
       "Sydney FC                           1\n",
       "Western Sydney Wanderers            1\n",
-      "Name: count, Length: 151, dtype: int64\n"
+      "Name: Squad, Length: 151, dtype: int64\n"
      ]
     }
    ],
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,15 +442,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Rk          Player Nation Pos     Comp   Age  Born  MP  Starts   Min   \n",
-      "1114  1035     G. González    URU  DF  La Liga  27.0  1994   9       3   365  \\\n",
+      "        Rk          Player Nation Pos     Comp   Age  Born  MP  Starts   Min  \\\n",
+      "1114  1035     G. González    URU  DF  La Liga  27.0  1994   9       3   365   \n",
       "1119  1036     N. González    ESP  MF  La Liga  20.0  2002  27      12  1114   \n",
       "1122  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
       "1121  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
@@ -453,8 +461,8 @@
       "1117  1036     N. González    ESP  MF  La Liga  20.0  2002  27      12  1114   \n",
       "1120  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
       "\n",
-      "      ...  PKwon  PKcon   OG  Recov  AerWon  AerLost  AerWon%   \n",
-      "1114  ...   0.00   0.00  0.0   8.54    2.44     2.93     45.5  \\\n",
+      "      ...  PKwon  PKcon   OG  Recov  AerWon  AerLost  AerWon%  \\\n",
+      "1114  ...   0.00   0.00  0.0   8.54    2.44     2.93     45.5   \n",
       "1119  ...   0.00   0.00  0.0   7.50    0.65     0.97     40.0   \n",
       "1122  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
       "1121  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
@@ -465,8 +473,8 @@
       "1117  ...   0.00   0.00  0.0   7.50    0.65     0.97     40.0   \n",
       "1120  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
       "\n",
-      "                          Squad   \n",
-      "1114      Club Atlético Peñarol  \\\n",
+      "                          Squad  \\\n",
+      "1114      Club Atlético Peñarol   \n",
       "1119  Club Atlético River Plate   \n",
       "1122  Club Atlético River Plate   \n",
       "1121         Defensa y Justicia   \n",
@@ -477,8 +485,8 @@
       "1117              VfB Stuttgart   \n",
       "1120              VfB Stuttgart   \n",
       "\n",
-      "                                          PlayerFaceUrl   \n",
-      "1114  https://cdn.sofifa.net/players/247/802/21_120.png  \\\n",
+      "                                          PlayerFaceUrl  \\\n",
+      "1114  https://cdn.sofifa.net/players/247/802/21_120.png   \n",
       "1119  https://cdn.sofifa.net/players/255/784/21_120.png   \n",
       "1122  https://cdn.sofifa.net/players/255/784/21_120.png   \n",
       "1121  https://cdn.sofifa.net/players/258/124/21_120.png   \n",
@@ -512,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +777,7 @@
        "[663 rows x 2 columns]"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,25 +789,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          count         mean         std   min      25%      50%      75%   \n",
-      "Rk       3159.0  1464.770497  841.410362   1.0   734.50  1474.00  2193.50  \\\n",
-      "Age      3158.0    26.153578    4.624805  16.0    23.00    26.00    29.00   \n",
-      "Born     3159.0  1994.712884   35.799847   0.0  1992.00  1996.00  1999.00   \n",
-      "MP       3159.0    18.981640   11.595337   1.0     8.00    20.00    29.00   \n",
-      "Starts   3159.0    13.908832   11.377452   0.0     3.00    12.00    23.00   \n",
-      "...         ...          ...         ...   ...      ...      ...      ...   \n",
-      "OG       3159.0     0.003577    0.020607   0.0     0.00     0.00     0.00   \n",
-      "Recov    3159.0     7.403568    3.596376   0.0     5.07     7.39     9.36   \n",
-      "AerWon   3159.0     1.668864    1.917018   0.0     0.54     1.23     2.27   \n",
-      "AerLost  3159.0     1.852719    2.193066   0.0     0.86     1.40     2.21   \n",
-      "AerWon%  3159.0    40.714846   24.010738   0.0    27.35    43.90    57.25   \n",
+      "          count         mean         std   min       25%      50%       75%  \\\n",
+      "Rk       2735.0  1463.269835  844.530377   1.0   736.500  1464.00  2195.500   \n",
+      "Age      2734.0    26.041697    4.682423  16.0    22.000    26.00    29.000   \n",
+      "Born     2735.0  1994.728702   38.441572   0.0  1992.000  1996.00  1999.000   \n",
+      "MP       2735.0    19.019378   11.630245   1.0     8.000    20.00    29.000   \n",
+      "Starts   2735.0    13.919196   11.428016   0.0     3.000    12.00    23.000   \n",
+      "...         ...          ...         ...   ...       ...      ...       ...   \n",
+      "OG       2735.0     0.003488    0.020603   0.0     0.000     0.00     0.000   \n",
+      "Recov    2735.0     7.418282    3.656263   0.0     5.100     7.38     9.375   \n",
+      "AerWon   2735.0     1.650567    1.938749   0.0     0.520     1.21     2.245   \n",
+      "AerLost  2735.0     1.833093    2.174223   0.0     0.835     1.39     2.190   \n",
+      "AerWon%  2735.0    40.437989   24.329573   0.0    26.100    43.50    57.100   \n",
       "\n",
       "            max  \n",
       "Rk       2921.0  \n",
@@ -822,13 +830,14 @@
     "# remove null and duplicate values\n",
     "# df.dropna(inplace=True)\n",
     "df.drop_duplicates(inplace=True)\n",
+    "df.drop_duplicates(inplace=True, subset=['Player'])\n",
     "\n",
     "print(df.describe().transpose())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
