added picking player position

--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -875,6 +875,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "839     2.12\n",
+      "2425    1.52\n",
+      "2857    2.12\n",
+      "1427    1.09\n",
+      "2717    0.99\n",
+      "        ... \n",
+      "2984    0.63\n",
+      "3019    1.75\n",
+      "3078    1.73\n",
+      "3123    1.92\n",
+      "3139    2.83\n",
+      "Name: CarDis, Length: 621, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# give me values of CarDist of this player position [\"MF\", \"MFDF\", \"MFFW\"]\n",
+    "print(df.loc[(df['Pos'] == \"MF\") | (df['Pos'] == \"MFDF\") | (df['Pos'] == \"MFFW\"), 'CarDis'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [],
